Fix a css clash... create a mixin for mobile logo and make use the same logo size and positioning for the menu bar and the main content.

--- a/src/listings.html
+++ b/src/listings.html
@@ -106,7 +106,7 @@
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
-              <div class="content">
+              <div class="listing-content">
                 <p>
                   At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 </p>
@@ -131,7 +131,7 @@
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
-              <div class="content">
+              <div class="listing-content">
                 <p>
                   At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 </p>
@@ -156,7 +156,7 @@
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
-              <div class="content">
+              <div class="listing-content">
                 <p>
                   At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 </p>
@@ -183,7 +183,7 @@
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
-              <div class="content">
+              <div class="listing-content">
                 <p>
                   At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 </p>
@@ -208,7 +208,7 @@
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
-              <div class="content">
+              <div class="listing-content">
                 <p>
                   At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 </p>
@@ -233,7 +233,7 @@
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
-              <div class="content">
+              <div class="listing-content">
                 <p>
                   At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 </p>
