Toggle between showing features and not.

--- a/src/listings.html
+++ b/src/listings.html
@@ -58,14 +58,15 @@
       <div class="ham-menu"></div>
       <div class="content">
         <div class="header">
-          <!-- TODO: Add background of abstract building from ABOUT US -->
           <h4>LOREM IPSUM DOLOR SIT AMET</h4>
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
           </p>
-          <!-- <input type="text" placeholder="    Search properties" class="listings-search"> -->
+
+          <input type="text" placeholder="    Search properties" class="listings-search">
           <div class="submenu">
-            <!-- <div class="plus-sign">+</div>LOOKING FOR CERTAIN FEATURES -->
+            <div id="features-toggle" class="plus-sign"></div>
+            LOOKING FOR CERTAIN FEATURES
           </div>
         </div>
         <div class="flexbox listings filters">
