--- a/src/index.html
+++ b/src/index.html
@@ -169,6 +169,7 @@
       </div>
       </div>
       <div id="contact-us">
+        <div id="contact-us-gmap"></div>
         <div class="contact-content">
           <div class="contact-header">
             <strong>CONTACT</strong> US
@@ -221,7 +222,24 @@
       </div>
     </div>
 
+    <script>
+      function initHomeMap() {
+        var uluru = {lat: 33.979449, lng: -118.413002};
+        var map = new google.maps.Map(document.getElementById('contact-us-gmap'), {
+          zoom: 12,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
+    <!-- TODO replace API key -->
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhoAiw62lFQnHpIqeqYJVu1KfRkcitEN0&callback=initHomeMap">
+  </script>
   </body>
