hide gmap from mobile view.

--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,6 @@
       </div>
       </div>
       <div id="contact-us">
-        <div id="contact-us-gmap"></div>
         <div class="contact-content">
           <div class="contact-header">
             <strong>CONTACT</strong> US
@@ -182,6 +181,11 @@
               <li><img src="images/ig-icon.png" class="icon-small"/><a href="https://www.instagram.com/groundsource">@groundsource</a></li>
             </ul>
           </div>
+        </div>
+        <!-- <div id="contact-us-gmap">
+        </div> -->
+         <div class="contact-us-gmap-container">
+          <div id="contact-us-gmap"></div>
         </div>
       </div>
       <div class="footer">
