Some fine-tuning of the navigator. Set font size of top navigation in pixels.

--- a/src/listings.html
+++ b/src/listings.html
@@ -256,11 +256,11 @@
           </div>
         </div>
         <div class="paginator">
-          <div class="navigate">&lt;-</div>
+          <div class="navigate-page">&lt;-</div>
           <div class="pages">
-            <a href="#" class="selected">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">...</a>
+            <a href="#" class="selected">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#" class="next"><strong>. . .</strong></a>
           </div>
-            <div class="navigate">-&gt;</div>
+          <div class="navigate-page">-&gt;</div>
         </div>
       </div>
     </div>
