--- a/src/index.html
+++ b/src/index.html
@@ -231,6 +231,10 @@
         var uluru = {lat: 33.979449, lng: -118.413002};
         var map = new google.maps.Map(document.getElementById('contact-us-gmap'), {
           zoom: 12,
+          scrollwheel: false,
+          navigationControl: false,
+          mapTypeControl: false,
+          scaleControl: false,
           center: uluru
         });
         var marker = new google.maps.Marker({
