--- a/src/index.html
+++ b/src/index.html
@@ -232,10 +232,8 @@
         var map = new google.maps.Map(document.getElementById('contact-us-gmap'), {
           zoom: 12,
           scrollwheel: false,
-          navigationControl: false,
-          mapTypeControl: false,
-          scaleControl: false,
-          center: uluru
+          disableDefaultUI: true,
+          center: {lat: 33.979449, lng: -118.5}
         });
         var marker = new google.maps.Marker({
           position: uluru,
