--- a/src/listing.html
+++ b/src/listing.html
@@ -174,9 +174,7 @@
         var map = new google.maps.Map(document.getElementById('about-google-map'), {
           zoom: 12,
           scrollwheel: false,
-          navigationControl: false,
-          mapTypeControl: false,
-          scaleControl: false,
+          disableDefaultUI: true,
           center: uluru
         });
         var marker = new google.maps.Marker({
