Make opacity of copy more closely match the comp. Add an underline to the last amenity.

--- a/src/listing.html
+++ b/src/listing.html
@@ -91,6 +91,7 @@
                 <hr>
 
                 <li>COMPLIMENTARY CLEANING SERVICE</li>
+                <hr>
               </ul>
             </div>
           </div>
@@ -123,9 +124,9 @@
               </div>
             </div>
             <div class="info-box">
-              <h2 class="title subdued">LOCATION</h2>
+              <h2 class="title">LOCATION</h2>
               <div id="about-google-map"></div>
-              <h2 class="title subdoed">FLOORPLAN</h2>
+              <h2 class="title">FLOORPLAN</h2>
               <img src="images/fake-plans.jpg" class="img-responsive" />
             </div>
           </div>
