Cleanup home-contact-us section.

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
         </div>
       </div>
       </div>
-      <div id="contact-us">
+      <div id="contact-us-home-section">
         <div class="contact-content">
           <div class="contact-header">
             <strong>CONTACT</strong> US
