--- a/src/about.html
+++ b/src/about.html
@@ -45,7 +45,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a class="active" href="about.html">ABOUT</a></li>
             <li><a href="listings.html">LISTINGS</a></li>
-            <li><a href="#">PROJECTS</a></li>
+            <li><a href="#">EXPERIENCE</a></li>
             <li><a class="contact-us-link">CONTACT</a></li>
           </ul>
         </div>
