--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="home-intro-left">
           <div>
             <div class="section-header">
-              ABOUT <span><b>GROUND</b></span>SOURCE
+              ABOUT <span><b>GROUND</b></span>SOURCEfoobars
             </div>
             <p>
               GROUNDSOURCE is a Los Angeles-based full-service real estate firm that specializes in representing tenants, landlords and investors. Our forty-five years of collective experience in the L.A. marketplace lets us combine extensive insider knowledge with trusted partnerships to create unparalleled value. We’re a boutique firm that offers clients the prestigious service they deserve with an intimate, hands-on approach.
