--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="review">
                   <img src="images/sample-person.png" />
                   <p>
-                    I found that I could be more productive at GroundSource!
+                    I found that I could be more productive at GroundSource! It's great!
                     <br />
                     <br />
                     <strong>- Jane Doe 4</strong>
