--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
+    <!-- I am a comment -->
   </head>
   <body>
     <div id="about-header">
