--- a/about.html
+++ b/about.html
@@ -438,7 +438,7 @@
 					
 
                     <a
-							href="tel:310.367.4336"
+							href="tel:310.824.3717"
 							class="text-decoration-none"
 						>
 							Cell: 310.824.3717
@@ -728,6 +728,12 @@
 					Land Line: 310.444.6103
 				</a>
 
+            <a
+					href="tel:310.824.3717"
+					class="text-decoration-none"
+				>
+					Land Line: 310.824.3717
+				</a>
 				<br />
 
 			
