--- a/about.html
+++ b/about.html
@@ -718,6 +718,7 @@
 					</a>
 				</div>
 			
+				<br />
 
 			
 
@@ -725,7 +726,7 @@
 					href="tel:310.444.6103"
 					class="text-decoration-none"
 				>
-					Land Line: 310.444.6103
+					Cell: 310.444.6103
 				</a>
 
             <a
