--- a/about.html
+++ b/about.html
@@ -382,7 +382,7 @@
 			</h2>
 
 			<p>
-				Chris Keller has represented tenants and landlords in Los Angeles for over 18 years, between Madison Partners and Cushman and Wakefield, an international commercial real estate firm.<br><br>He has twice been awarded Broker of the Year in Los Angeles. Relocation, renewal/lease/sale negotiations, subleasing and expansion are among his areas of expertise. A native of Los Angeles and fifth-generation Californian, Chris’s knowledge of the local market is unparalleled.
+				Chris Keller has represented tenants and landlords in Los Angeles for over 20 years, both with Madison Partners and Cushman and Wakefield, an international commercial real estate firm.<br><br>He has twice been awarded Broker of the Year in Los Angeles. Relocation, renewal/lease/sale negotiations, subleasing and expansion are among his areas of expertise. A native of Los Angeles and fifth-generation Californian, Chris’s knowledge of the local market is unparalleled.
 			</p>
 
 		</div>
@@ -469,7 +469,7 @@
 			</h2>
 
 			<p>
-				Daniela Winter brings over 30 years of experience in office administration in the legal, interior design, restaurant, branding and non-profit fields.<span class="Apple-converted-space"> </span>Daniela grew up in Los Angeles, attended U.C.L.A. for her undergraduate education, has lived and raised her family on the Westside and is a member of multiple community organizations.<span class="Apple-converted-space"> </span>Daniela brings business awareness and attention to all aspects of client service.
+				Daniela Winter, Groundsource co-founder, has experience with tenant representation and has helped investors acquire various property types.  Daniela brings over 30 years of experience in office administration in the legal, interior design, restaurant, branding and non-profit fields.<span class="Apple-converted-space"> </span>Daniela, a UCLA graduate, grew up in Los Angeles, has raised her family on the Westside, and is a member of multiple community organizations.  She brings business awareness and attention to all aspects of client service.
 			</p>
 
 		</div>
