--- a/about.html
+++ b/about.html
@@ -611,7 +611,7 @@
 
 		<div class="about__bio">
 			<p>
-				Chris Keller has represented tenants and landlords in Los Angeles for over 18 years, between Madison Partners and Cushman and Wakefield, an international commercial real estate firm.
+				Chris Keller has represented tenants and landlords in Los Angeles for over 20 years, both with Madison Partners and Cushman and Wakefield, an international commercial real estate firm.
 			</p>
 		</div>
 
