--- a/about.html
+++ b/about.html
@@ -690,7 +690,7 @@
 
 		<div class="about__bio">
 			<p>
-				Daniela Winter brings over 30 years of experience in office administration in the legal, interior design, restaurant, branding and non-profit fields.
+				Daniela Winter, Groundsource co-founder, has experience with tenant representation and has helped investors acquire various property types.  Daniela brings over 30 years of experience in office administration in legal, interior design, restaurant, branding and non-profit fields.
 			</p>
 		</div>
 
