--- a/about.html
+++ b/about.html
@@ -469,7 +469,7 @@
 			</h2>
 
 			<p>
-				Daniela Winter, Groundsource co-founder, has experience with tenant representation and has helped investors acquire various property types. <br><br> Daniela brings over 30 years of experience in office administration in the legal, interior design, restaurant, branding and non-profit fields.<span class="Apple-converted-space"> </span><br><br>Daniela, a UCLA graduate, grew up in Los Angeles, has raised her family on the Westside, and is a member of multiple community organizations.  She brings business awareness and attention to all aspects of client service.
+				Daniela Winter, Groundsource co-founder, has experience with tenant representation and has helped investors acquire various property types. <br><br> Daniela brings over 30 years of experience in office administration in legal, interior design, restaurant, branding and non-profit fields.<span class="Apple-converted-space"> </span><br><br>Daniela, a UCLA graduate, grew up in Los Angeles, has raised her family on the Westside, and is a member of multiple community organizations.  She brings business awareness and attention to all aspects of client service.
 			</p>
 		</div>
 
