Isaac Updates by Adam

--- a/about.html
+++ b/about.html
@@ -489,7 +489,8 @@
 		<div class="hero">
 
 			<div class="hero__avatar">
-				<img src="/images/GS_MarkDalton_Profile.jpg" />
+			
+          <img src="/images/img_5403.JPG" />
 			</div>
 
 			<div class="hero__text">
@@ -497,7 +498,7 @@
 				<div>
 
 					<h4 class="agent-name">
-						MARK DALTON
+						Isaac Abginesaz
 					</h4>
 
 					<h6 class="agent-position">
@@ -509,8 +510,8 @@
 				<div class="agent-contact">
 
 					
-						<a href="mailto:mdalton@groundsource.net">
-							mdalton@groundsource.net
+						<a href="mailto:iabginesaz@groundsource.net">
+							iabginesaz@groundsource.net
 						</a>
 					
 
