Updating Isaac details formatting

--- a/about.html
+++ b/about.html
@@ -557,7 +557,7 @@
 			</h2>
 
 			<p>
-				<span class="s1">Isaac Abginesaz, born and raised in Los Angeles, CA, graduated cum laude from the University of Southern California with a B.S. in Business Administration and an emphasis in Real Estate Finance. He has been a licensed real estate agent since 2017and has held previous experience representing clients in the Greater Los Angeles Area across all property types including office, multifamily and retail. Isaac also assists managing the administration side of Chris’s business, involving marketing, contract processing, listing management, due diligence &amp; client relations. Isaac’s main priority is ensuring each transaction is facilitated to the highest degree while providing clients with incomparable professionalism and personal service.</span>
+				<span class="s1">Isaac Abginesaz, born and raised in Los Angeles, CA, graduated cum laude from the University of Southern California with a B.S. in Business Administration and an emphasis in Real Estate Finance.<br><br>He has been a licensed real estate agent since 2017 and has held previous experience representing clients in the Greater Los Angeles Area across all property types including office, multifamily and retail.<br><br>Isaac also assists managing the administration side of Chris’ business, involving marketing, contract processing, listing management, due diligence &amp; client relations. Isaac’s main priority is ensuring each transaction is facilitated to the highest degree while providing clients with incomparable professionalism and personal service.</span>
 			</p>
 
 		</div>
