more updates from Adam

--- a/about.html
+++ b/about.html
@@ -480,8 +480,7 @@
       
         <div
 	id="agent-3"
-	class="agent-modal modal"
->
+	class="agent-modal modal">
 	<div class="modal__inner modal__inner--floating">
 
 		<div class="modal__close"></div>
@@ -490,7 +489,7 @@
 
 			<div class="hero__avatar">
 			
-          <img src="/images/img_5403.JPG" />
+          <img src="/images/GS_IsaacAbginesaz_Profile.jpg" />
 			</div>
 
 			<div class="hero__text">
@@ -498,7 +497,7 @@
 				<div>
 
 					<h4 class="agent-name">
-						Isaac Abginesaz
+					Isaac Abginesaz
 					</h4>
 
 					<h6 class="agent-position">
