--- a/about.html
+++ b/about.html
@@ -748,7 +748,7 @@
 
 	<div
 		class="hero"
-		style="background-image: url('/images/img_5403.JPG')"
+		style="background-image: url('/images/GS_IsaacAbginesaz_Profile.jpg')"
 	>
 		<div class="hero__name">
 
